<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:layout_marginTop="15px"
            android:text="@string/txtCategory"
            android:id="@+id/txtCategory"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25px"
            android:layout_marginRight="25px"
            android:layout_width="fill_parent"
            android:layout_alignParentLeft="true"></TextView>

    <Spinner
            android:layout_width="fill_parent"
            android:layout_marginLeft="25px"
            android:layout_marginRight="25px"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtCategory"
            android:layout_marginBottom="25px"
            android:id="@+id/comboCategory"
            android:padding="40px"></Spinner>

    <TextView
            android:layout_height="wrap_content"
            android:id="@+id/txtDescribtion"
            android:layout_marginLeft="25px"
            android:layout_marginRight="25px"
            android:text="@string/Describtion"
            android:layout_width="fill_parent"
            android:layout_below="@+id/comboCategory"></TextView>

    <EditText
            android:lines="5"
            android:layout_marginTop="5px"
            android:layout_marginLeft="25px"
            android:layout_marginRight="25px"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_marginBottom="25px"
            android:layout_below="@+id/txtDescribtion"
            android:id="@+id/editDescribtion"></EditText>

    <ImageButton
            android:id="@+id/cameraButton"
            android:layout_marginLeft="25px"
            android:layout_marginRight="25px"
            android:layout_marginTop="30px"
            android:src="@drawable/camera"
            android:layout_width="fill_parent"
            android:layout_below="@+id/editDescribtion"
            android:onClick="TakeShot_onClick"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter"
            android:layout_height="130px"
            android:padding="10px"></ImageButton>

    <TextView
            android:layout_height="wrap_content"
            android:id="@+id/txtLocation"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10px"
            android:layout_marginRight="10px"
            android:layout_width="fill_parent"
            android:lines="1"></TextView>

    <LinearLayout
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_above="@+id/txtLocation"
            android:layout_alignLeft="@+id/txtLocation"
            android:layout_alignRight="@+id/txtLocation">

        <Button
                android:text="@string/Send"
                android:onClick="Report_onClick"
                android:layout_margin="15px"
                android:layout_marginTop="25px"
                android:layout_width="fill_parent"
                android:layout_marginBottom="15px"
                android:layout_height="fill_parent"
                android:layout_weight="3"
                android:id="@+id/Send"
                android:textSize="28px"
                android:padding="30px"></Button>

        <Button
                android:text="@string/Back"
                android:onClick="Back_onClick"
                android:layout_margin="15px"
                android:layout_marginTop="25px"
                android:layout_width="fill_parent"
                android:layout_marginBottom="15px"
                android:layout_height="fill_parent"
                android:layout_weight="4"
                android:id="@+id/Back"
                android:textSize="28px"
                android:padding="30px"></Button>
    </LinearLayout>
</RelativeLayout>
