<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <ImageView
            android:layout_alignParentLeft="true"
            android:id="@+id/Icon"
            android:layout_alignParentTop="true"
            android:cropToPadding="true"
            android:scaleType="fitCenter"
            android:layout_width="100px"
            android:layout_height="100px"
            android:layout_marginTop="20px"
            android:layout_marginLeft="25px"
            android:layout_marginRight="10px"
            android:src="@drawable/exclamation_mark_big"></ImageView>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="48px"
            android:layout_marginTop="15px"
            android:text="Doba trvaní"
            android:gravity="left"
            android:layout_toRightOf="@+id/Icon"
            android:layout_below="@+id/txtDurationDesc"
            android:id="@+id/txtDuration"
            android:lines="1"
            android:layout_marginBottom="10px"
            android:layout_marginLeft="15px"
            android:layout_marginRight="15px"></TextView>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtDurationDesc"
            android:text="@string/Duration"
            android:layout_toRightOf="@+id/Icon"
            android:layout_marginTop="15px"></TextView>

    <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:id="@+id/Picture"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:scaleType="centerInside"
            android:layout_marginLeft="10px"
            android:layout_marginRight="10px"
            android:maxHeight="350px"
            android:layout_below="@+id/txtDuration"
            android:layout_marginBottom="5px"></ImageView>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Picture"
            android:text="Popis mista"
            android:id="@+id/Describtion"
            android:textSize="28px"
            android:layout_marginLeft="15px"
            android:layout_marginRight="15px"
            android:maxHeight="140px"
            android:layout_marginTop="3px"></TextView>

    <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_above="@+id/txtLocation"
            android:layout_marginRight="20px"
            android:layout_alignLeft="@+id/txtLocation"
            android:layout_alignRight="@+id/txtLocation">

        <Button
                android:text="@string/Back"
                android:onClick="Back_onClick"
                android:layout_width="fill_parent"
                android:textSize="30px"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:id="@+id/Back"></Button>

        <Button
                android:text="@string/MarkAsOutdated"
                android:onClick="Delete_onClick"
                android:layout_width="fill_parent"
                android:textSize="30px"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:id="@+id/MarkAsOutdated"></Button>
    </LinearLayout>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtLocation"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10px"
            android:layout_marginRight="10px"
            android:lines="1"></TextView>

</RelativeLayout>
